MAR-530: added scrollbars to the proper content area. some minor cleanup and CSS name fixes.

--- a/src/EPiServer.Marketing.Testing.Web/ClientResources/css/ABTesting.css
+++ b/src/EPiServer.Marketing.Testing.Web/ClientResources/css/ABTesting.css
@@ -1,8 +1,13 @@
-﻿.abBody {
+﻿.epi-abtest-body {
     background-color: #eee;
     padding: 16px 32px;
     font-family: arial;
     font-size: 14px;
+}
+
+.epi-abtest-body-container {
+    height:100%;
+    position: absolute;
 }
 
 .cardWrapper {
@@ -223,19 +228,16 @@
     margin-bottom: 24px;
 }
 
-.hrToolbar {
-    margin-bottom: 24px;
-}
-
 .hrDetails {
     margin-top: -10px;
     margin-bottom: 15px;
 }
 
-.hrAdvanced {
-    margin-right: -18px;
-    margin-left: -18px;
-    margin-bottom: 0;
+.epi-abtest-hr {
+    border-bottom: 1px solid #eee;
+    border-top: none;
+    border-left: none;
+    margin-bottom: 24px;
 }
 
 .leadingContent {
@@ -387,4 +389,13 @@
 .abPickWinnerAction {
     text-align: center;
     margin-bottom: 36px;
+}
+
+.epi-abtest-advanced-header {
+    color: #000;
+    margin: 8px 0;
+    padding: 14px 8px 12px 20px;
+    background-color: #fff;
+    border-bottom: 1px solid #eee;
+    font-weight: bold;
 }
